# ostis-smart-home

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  cat.txt  conanfile.py  docker-compose.yml  mkdocs.yml  ostis-example-app.ini  repo.path
problem-solver/cxx/exampleModule/: CMakeLists.txt
problem-solver/cxx/exampleModule/agents/: IsomorphicSearchAgent.cpp  PathFindingAgent.cpp  PathFindingAgent.hpp
problem-solver/cxx/exampleModule/dataStructures/: ConnectorInfo.hpp  ConnectorTemplateInfo.hpp  PathInfo.hpp  WeightTemplateInfo.hpp
problem-solver/cxx/exampleModule/keynodes/: Keynodes.hpp
problem-solver/cxx/exampleModule/searcher/: PathSearcher.cpp  PathSearcher.hpp
problem-solver/cxx/exampleModule/structures/: ConnectorTemplateInfo.hpp  ConnectorTemplateKeyElements.hpp  WeightTemplateInfo.hpp  WeightTemplateKeyElements.hpp
problem-solver/cxx/exampleModule/test/: CMakeLists.txt  tests.cmake
problem-solver/cxx/exampleModule/test/testStructures/: checkTemplates.scs  graphWithThreeStepsShortestPath.scs  graphWithTwoStepsShortestPath.scs  number.scs  templates.scs  testAction.scs
problem-solver/cxx/exampleModule/test/units/: testNumberUtils.cpp  testPathFindingAgent.cpp
problem-solver/cxx/exampleModule/test/utils/: TestUtils.cpp  TestUtils.hpp
problem-solver/cxx/exampleModule/utils/: NumberUtils.cpp  NumberUtils.hpp  TemplateUtils.cpp  TemplateUtils.hpp
problem-solver/cxx/smart-home-module/: CMakeLists.txt  SmartHomeModule.cpp  SmartHomeModule.hpp  smart_home_module.cpp  smart_home_module.hpp
problem-solver/cxx/smart-home-module/agents/: DeviceScheduleMonitorAgent.cpp  DeviceScheduleMonitorAgent.hpp  LampMotionControlAgent.cpp  LampMotionControlAgent.hpp  LightBulbAgent.cpp  MotionSensorAgent.cpp  MotionSensorAgent.hpp  ScheduleTickerAgent.cpp  ScheduleTickerAgent.hpp  away_mode_agent.cpp  away_mode_agent.hpp  device_state_agent.cpp  device_state_agent.hpp  humidity_control_agent.cpp  humidity_control_agent.hpp  power_saving_agent.cpp  power_saving_agent.hpp  temperature_control_agent.cpp  temperature_control_agent.hpp
problem-solver/cxx/smart-home-module/agents/common/: automation_utils.hpp
problem-solver/cxx/smart-home-module/agents/movement-lamp/: LightBulbAgent.cpp  LightBulbAgent.hpp  MotionSensorAgent.cpp  MotionSensorAgent.hpp
problem-solver/cxx/smart-home-module/agents/schedule-agent/: DeviceScheduleMonitorAgent.cpp  DeviceScheduleMonitorAgent.hpp  ScheduleTickerAgent.cpp  ScheduleTickerAgent.hpp
problem-solver/cxx/smart-home-module/agents/schedule-humanizer/: DeviceScheduleMonitorAgent.cpp  ScheduleTickerAgent.cpp
problem-solver/cxx/smart-home-module/keynodes/: Keynodes.cpp  Keynodes.hpp  keynodes.cpp  keynodes.hpp
problem-solver/cxx/smart-home-module/specifications/agent_of_away_mode_control/: lib_component_ui_menu_control_away_mode.scs  ui_menu_control_away_mode.scs
problem-solver/cxx/smart-home-module/specifications/agent_of_device_state_control/: lib_component_ui_menu_change_device_state.scs  ui_menu_change_device_state.scs
problem-solver/cxx/smart-home-module/specifications/agent_of_humidity_control/: lib_component_ui_menu_control_room_humidity.scs  ui_menu_control_room_humidity.scs
problem-solver/cxx/smart-home-module/specifications/agent_of_power_saving_control/: lib_component_ui_menu_control_power_saving.scs  ui_menu_control_power_saving.scs
problem-solver/cxx/smart-home-module/specifications/agent_of_temperature_control/: lib_component_ui_menu_control_room_temperature.scs  ui_menu_control_room_temperature.scs
problem-solver/cxx/smart-home-module/test/: CMakeLists.txt
problem-solver/cxx/smart-home-module/test/test-structures/: away_mode_activation_test.scs  away_mode_false_trigger_test.scs  (+15 more)
(+66 files in other folders)
